# yepcode-run-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: branches-master.yml  ci.yml  pull-requests.yml  release.yml  tags-v.yml  tests.yml
tests/: test_language_detector.py  test_yepcode_run.py  test_yepcode_storage.py
yepcode_run/: __init__.py  types.py
yepcode_run/api/: api_manager.py  types.py  yepcode_api.py
yepcode_run/env/: yepcode_env.py
yepcode_run/run/: execution.py  yepcode_run.py
yepcode_run/storage/: yepcode_storage.py
yepcode_run/utils/: config_manager.py  language_detector.py
